--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,12 @@ aside p {
   font-weight: bold;
   color: blue;
 }
+
+.hidden {
+  display: none;
+}
+
+.winner {
+  color: #7434fc;
+  font-size: 50px;
+}
